--- a/config/database.yml
+++ b/config/database.yml
@@ -49,7 +49,10 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  <<: *default
-  database: kadai_tasklist_production
-  username: kadai_tasklist
-  password: <%= ENV['KADAI_TASKLIST_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
+  host: db.jcmpnqeodystggjbfpiv.supabase.co
+  database: postgres
+  username: postgres
+  password: <%= ENV['SUPABASE_DATABASE_PASSWORD'] %>
